--- a/notebooks/TT_All_models_experiments.ipynb
+++ b/notebooks/TT_All_models_experiments.ipynb
@@ -46,7 +46,7 @@
       "source": [
         "### Mount Google Drive\n",
         "\n",
-        "**Requires dataset_tensor.npy file in \"Colab Notebooks/Tensorized Transformers/Data\" folder!**"
+        "**Requires dataset_tensor.npy file in \"Colab Notebooks/FATE/Data\" folder!**"
       ]
     },
     {
@@ -58,7 +58,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
-        "PATH = '/content/drive/My Drive/Colab Notebooks/Tensorized Transformers/'\n",
+        "PATH = '/content/drive/My Drive/Colab Notebooks/FATE/'\n",
         "DATA_PATH = PATH + 'Data/'"
       ],
       "execution_count": null,
@@ -96,7 +96,7 @@
         "id": "YHxUZWqils8I"
       },
       "source": [
-        "### Clone Tensorized Transformers"
+        "### Clone FATE"
       ]
     },
     {
@@ -353,7 +353,7 @@
         "\n",
         "# Folders:\n",
         "folder = datetime.datetime.now().strftime(\"%Y%m%d\") + '_' + datetime.datetime.now().strftime(\"%H%M%S\")\n",
-        "path_to_aw = '/content/drive/MyDrive/Colab Notebooks/Tensorized Transformers/AW/'\n",
+        "path_to_aw = '/content/drive/MyDrive/Colab Notebooks/FATE/AW/'\n",
         "model_save_path = path_to_aw + folder + '/model_' + folder + '.h5'\n",
         "\n",
         "# model\n",
