--- a/notebooks/TT_All_models_experiments.ipynb
+++ b/notebooks/TT_All_models_experiments.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "TT_All_models_experiments.ipynb",
+      "name": "all_experiments.ipynb",
       "provenance": [],
       "collapsed_sections": [
         "K6NYTcAvln4J",
@@ -58,7 +58,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
-        "PATH = '/content/drive/My Drive/Colab Notebooks/FATE/'\n",
+        "PATH = '/content/drive/My Drive/Colab_Notebooks/FATE/'\n",
         "DATA_PATH = PATH + 'Data/'"
       ],
       "execution_count": null,
@@ -107,13 +107,13 @@
       "source": [
         "# Clone the entire repo.\n",
         "%cd /content\n",
-        "!git clone -l -s https://github.com/onurbil/TENT.git tensorized_transformers\n",
-        "%cd tensorized_transformers\n",
+        "!git clone -l -s https://github.com/Tajamul21/FATE.git FATE\n",
+        "%cd FATEs\n",
         "!ls\n",
         "%cd ..\n",
         "\n",
         "# Update the repository\n",
-        "%cd tensorized_transformers\n",
+        "%cd FATE\n",
         "!git pull\n",
         "!ls"
       ],
@@ -128,7 +128,7 @@
       "source": [
         "import sys\n",
         "\n",
-        "TT_REPO_PATH = '/content/tensorized_transformers'\n",
+        "TT_REPO_PATH = '/content/FATE'\n",
         "\n",
         "sys.path.append(TT_REPO_PATH)\n",
         "print(sys.path)"
